--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,6 @@
     <title>Imageboard</title>
 </head>
 <link href="/custom.css" rel="stylesheet">
-
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
@@ -39,56 +38,17 @@
 <div class="container mt-4">
     <div class="row">
         <div class="col-md-8">
-            <div class="card mb-4" data-level="1">
+            <div class="card mb-4" data-level="1" th:each="thread : ${threads}" >
                 <div class="card-body">
-                    <h5 class="card-title">Thread Title 1</h5>
+                    <h5 class="card-title" th:text="${thread.title}">Thread Title 1</h5>
                     <img class="thread-image" src="sample_image_1.jpg" alt="Sample Image">
-                    <p class="card-text">This is the content of the first thread. Lorem ipsum dolor sit amet,
+                    <p class="card-text" th:text="${thread.description}">This is the content of the first thread. Lorem ipsum dolor sit amet,
                         consectetur adipiscing elit.</p>
                     <div class="answer" data-level="1">Answer 1</div>
                     <div class="answer" data-level="2">Answer 2</div>
                     <div class="answer" data-level="3">Answer 3</div>
                 </div>
             </div>
-
-            <div class="card mb-4" data-level="1">
-                <div class="card-body">
-                    <h5 class="card-title">Thread Title 2</h5>
-                    <img class="thread-image" src="sample_image_2.jpg" alt="Sample Image">
-                    <p class="card-text">This is the content of the second thread. Duis tristique congue metus, ac dapibus est
-                        mollis nec.</p>
-                    <div class="answer">Answer 1</div>
-                    <div class="answer">Answer 2</div>
-                    <div class="answer">Answer 3</div>
-                </div>
-            </div>
-
-            <div class="card mb-4" data-level="1">
-                <div class="card-body">
-                    <h5 class="card-title">Thread Title 3</h5>
-                    <img class="thread-image" src="sample_image_3.jpg" alt="Sample Image">
-                    <p class="card-text">This is the content of the third thread. Quisque fermentum lacus sed metus
-                        luctus, nec dapibus ipsum molestie.</p>
-                    <div class="answer">Answer 1</div>
-                    <div class="answer">Answer 2</div>
-                    <div class="answer">Answer 3</div>
-                </div>
-            </div>
-
-            <div class="card mb-4" data-level="1">
-                <div class="card-body">
-                    <h5 class="card-title">Thread Title 4</h5>
-                    <img class="thread-image" src="sample_image_4.jpg" alt="Sample Image">
-                    <p class="card-text">This is the content of the fourth thread. Sed eu diam sit amet est cursus lacinia.
-                        Nullam auctor lectus id consectetur vestibulum.</p>
-                    <div class="answer">Answer 1</div>
-                    <div class="answer">Answer 2</div>
-                    <div class="answer">Answer 3</div>
-                </div>
-            </div>
-
-            <!-- Add more threads here -->
-
         </div>
     </div>
 </div>
