--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:form="http://www.w3.org/1999/xhtml" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,16 +34,31 @@
         </div>
     </div>
 </nav>
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-md-12 text-center">
+                <a th:href="newthread" class="btn btn-primary">Start new thread</a>
+        </div>
+    </div>
+</div>
+
+
 
 <div class="container mt-4">
     <div class="row">
         <div class="col-md-8">
             <div class="card mb-4" data-level="1" th:each="thread : ${threads}" >
                 <div class="card-body">
-                    <h5 class="card-title" th:text="${thread.title}">Thread Title 1</h5>
+                   <a th:href="@{'thread/' + ${thread.id}}"><h5 class="card-title" th:text="${thread.title}">Thread Title 1</h5></a>
+                    <div class="thread-info">
+                        <span class="thread-id" th:text="${thread.id}">ID</span>
+                    </div>
                     <img class="thread-image" src="sample_image_1.jpg" alt="Sample Image">
                     <p class="card-text" th:text="${thread.description}">This is the content of the first thread. Lorem ipsum dolor sit amet,
                         consectetur adipiscing elit.</p>
+                    <form th:method = "GET" th:action = "threadPageRedirect">
+                        <a th:href="newthread" class="btn btn-primary">Reply</a>
+                    </form>
                     <div class="answer" data-level="1">Answer 1</div>
                     <div class="answer" data-level="2">Answer 2</div>
                     <div class="answer" data-level="3">Answer 3</div>
