--- a/src/main/resources/templates/newThread.html
+++ b/src/main/resources/templates/newThread.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
     <title>Submit Thread - Imageboard</title>
+    <link href="/custom.css" rel="stylesheet">
 </head>
 
 <body>
@@ -12,7 +13,7 @@
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <h2 class="text-center">Submit Thread</h2>
-            <form action="#" method="post" th:action="posted" th:object="${thread}">
+            <form method="post" th:action="posted" th:object="${thread}">
 <!--                <div class="mb-3">-->
 <!--                    <label for="name" class="form-label">Your Name</label>-->
 <!--                    <input th:field = "*{name}" type="text" class="form-control" id="name" placeholder="Enter your name">-->
@@ -30,6 +31,7 @@
                     <input type="file" class="form-control" id="image">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
+
             </form>
         </div>
     </div>
