--- a/src/main/resources/templates/threadPage.html
+++ b/src/main/resources/templates/threadPage.html
@@ -2,44 +2,55 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
-  <title>Selected Thread - Imageboard</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
+    <title>Selected Thread - Imageboard</title>
+    <link href="/custom.css" rel="stylesheet">
 </head>
 
 <body>
 <div class="container mt-4">
-  <div class="row">
-    <div class="col-md-6 offset-md-3">
-      <h2 class="text-center">Selected Thread</h2>
-      <button class="btn btn-primary d-block mx-auto mb-3">Reply</button> <!-- Reply button at top center -->
-      <div class="card mb-4">
-        <div class="card-body">
-          <h5 class="card-title">Thread Title</h5>
-          <img class="thread-image" src="sample_image.jpg" alt="Sample Image">
-          <p class="card-text">Thread Description Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <div class="col-md-12 text-center">
+                <a th:href="@{'reply/' + ${thread.id}}" class="btn btn-primary">Reply</a>
+            </div>
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h5 class="card-title">Thread Title</h5>
+                    <div class="thread-info">
+                        <span class="thread-id" th:text="${thread.id}">ID</span>
+                    </div>
+                    <img class="thread-image" src="sample_image.jpg" alt="Sample Image">
+                    <p class="card-text">Thread Description Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+            <h3>Replies</h3>
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h5 class="card-title">Author Name 1</h5>
+                    <img class="answer-image" src="sample_image_1.jpg" alt="Answer Image">
+                    <p class="card-text">Answer Description 1</p>
+                </div>
+            </div>
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h5 class="card-title">Author Name 2</h5>
+                    <img class="answer-image" src="sample_image_2.jpg" alt="Answer Image">
+                    <p class="card-text">Answer Description 2</p>
+                </div>
+            </div>
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h5 class="card-title">Author Name 3</h5>
+                    <img class="answer-image" src="sample_image_3.jpg" alt="Answer Image">
+                    <p class="card-text">Answer Description 3</p>
+                </div>
+            </div>
+            <!-- Add more reply cards as needed -->
         </div>
-      </div>
-      <h3>Replies</h3>
-      <div class="card mb-4">
-        <div class="card-body">
-          <p class="card-text">Reply 1</p>
-        </div>
-      </div>
-      <div class="card mb-4">
-        <div class="card-body">
-          <p class="card-text">Reply 2</p>
-        </div>
-      </div>
-      <div class="card mb-4">
-        <div class="card-body">
-          <p class="card-text">Reply 3</p>
-        </div>
-      </div>
-      <!-- Add more reply cards as needed -->
     </div>
-  </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
