--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,35 +49,25 @@
         <div class="col-md-8-center">
             <div class="card mb-4" data-level="1" th:each="thread : ${threads}" >
                 <div class="card-body">
-                   <a th:href="@{'thread/' + ${thread.id}}"><h5 class="card-title" th:text="${thread.title}">Thread Title 1</h5></a>
+                   <a th:href="@{'thread/' + ${thread.id}}">
+                       <h5 class="card-title" th:text="${thread.title}">Thread Title 1</h5></a>
                     <div class="thread-info">
                         <span class="thread-id" th:text="${thread.id}">ID</span>
                     </div>
+
                     <img class="thread-image" src="sample_image_1.jpg" alt="Sample Image">
-                    <p class="card-text" th:text="${thread.description}">This is the content of the first thread. Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit.</p>
-                    <a th:href="@{'thread/reply/' + ${thread.id}}" class="btn btn-primary">Reply</a>
-                    <div class="card mb-4">
+                    <p class="card-text" th:text="${thread.replies[0].description}">Thread Description</p>
+
+                    <div class="card mb-4" th:each="reply,stats: ${thread.replies}" th:if="${reply != thread.replies[0] && stats.index < 4}">
                         <div class="card-body">
-                            <h5 class="card-title">Author Name 1</h5>
-                            <img class="answer-image" src="sample_image_1.jpg" alt="Answer Image">
-                            <p class="card-text">Answer Description 1</p>
+                            <h5 class="card-title" th:text="${reply.name}">Author Name</h5>
+                            <img class="answer-image" th:src="${reply.imgURL}" alt="Answer Image" src="#">
+                            <p class="card-text" th:text="${reply.description}">Answer Description 1</p>
                         </div>
                     </div>
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <h5 class="card-title">Author Name 2</h5>
-                            <img class="answer-image" src="sample_image_2.jpg" alt="Answer Image">
-                            <p class="card-text">Answer Description 2</p>
-                        </div>
-                    </div>
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <h5 class="card-title">Author Name 3</h5>
-                            <img class="answer-image" src="sample_image_3.jpg" alt="Answer Image">
-                            <p class="card-text">Answer Description 3</p>
-                        </div>
-                    </div>
+
+                    <a th:href="@{'thread/' + ${thread.id}}" class="btn btn-primary">Reply</a>
+
                 </div>
             </div>
         </div>
