--- a/src/main/resources/templates/threadPage.html
+++ b/src/main/resources/templates/threadPage.html
@@ -10,45 +10,86 @@
 </head>
 
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+        <a class="navbar-brand" href="/m">Imageboard</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Gallery</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Upload</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 <div class="container mt-4">
+
+    <div class="card mb-4">
+        <div class="card-body">
+            <form method="post" th:action="${'/submit/' + thread.id}">
+                <div class="mb-3">
+                    <label for="nameInput" class="form-label">Name</label>
+                    <input name="name" type="text" class="form-control" id="nameInput" placeholder="Your Name">
+                </div>
+                <div class="mb-3">
+                    <label for="descriptionInput" class="form-label">Description</label>
+                    <textarea name="description" class="form-control" id="descriptionInput" rows="3"
+                              placeholder="Reply Description"></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="imageInput" class="form-label">Upload Image</label>
+                    <input name="imgURL" type="file" class="form-control" id="imageInput">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-6 offset-md-3">
+
             <div class="col-md-12 text-center">
-                <a th:href="@{'reply/' + ${thread.id}}" class="btn btn-primary">Reply</a>
+                <a th:href="@{'/' + ${thread.id}}" class="btn btn-primary">Reply</a>
             </div>
+
             <div class="card mb-4">
+
                 <div class="card-body">
-                    <h5 class="card-title">Thread Title</h5>
+                    <h5 class="card-title" th:text="${thread.title}">Thread Title</h5>
                     <div class="thread-info">
-                        <span class="thread-id" th:text="${thread.id}">ID</span>
+                        <span class="thread-id" th:text="${thread.replies[0].id}">ID</span>
                     </div>
-                    <img class="thread-image" src="sample_image.jpg" alt="Sample Image">
-                    <p class="card-text">Thread Description Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <img class="thread-image" src="sample_image.jpg" alt="Sample Image" th:if="${thread.replies[0].getImgURL() != null && thread.replies[0].getImgURL() != ''}">
+                    <p class="card-text" th:text="${thread.replies[0].getDescription()}">Thread Description</p>
                 </div>
             </div>
+
             <h3>Replies</h3>
-            <div class="card mb-4">
+            <div class="card mb-4" th:each="reply : ${thread.replies}" th:if="${reply != thread.replies[0]}">
                 <div class="card-body">
-                    <h5 class="card-title">Author Name 1</h5>
-                    <img class="answer-image" src="sample_image_1.jpg" alt="Answer Image">
-                    <p class="card-text">Answer Description 1</p>
+                    <div class="thread-info">
+                        <span class="thread-id" th:text="${reply.id}">ID</span>
+                    </div>
+                    <h5 class="card-title" th:text="${reply.name}">Author Name 1</h5>
+                    <img class="answer-image" src="#" th:src="${reply.imgURL}" alt="Answer Image" th:if="${reply.getImgURL() != null && reply.getImgURL() != ''}">
+                    <p class="card-text" th:text="${reply.description}">Answer Description 1</p>
                 </div>
             </div>
-            <div class="card mb-4">
-                <div class="card-body">
-                    <h5 class="card-title">Author Name 2</h5>
-                    <img class="answer-image" src="sample_image_2.jpg" alt="Answer Image">
-                    <p class="card-text">Answer Description 2</p>
-                </div>
-            </div>
-            <div class="card mb-4">
-                <div class="card-body">
-                    <h5 class="card-title">Author Name 3</h5>
-                    <img class="answer-image" src="sample_image_3.jpg" alt="Answer Image">
-                    <p class="card-text">Answer Description 3</p>
-                </div>
-            </div>
-            <!-- Add more reply cards as needed -->
+
         </div>
     </div>
 </div>
