--- a/src/main/resources/templates/newThread.html
+++ b/src/main/resources/templates/newThread.html
@@ -14,10 +14,10 @@
         <div class="col-md-6 offset-md-3">
             <h2 class="text-center">Submit Thread</h2>
             <form method="post" th:action="posted">
-                <!--                <div class="mb-3">-->
-                <!--                    <label for="name" class="form-label">Your Name</label>-->
-                <!--                    <input th:field = "*{name}" type="text" class="form-control" id="name" placeholder="Enter your name">-->
-                <!--                </div>-->
+                <div class="mb-3">
+                    <label for="name" class="form-label">Your Name</label>
+                    <input name="name" type="text" class="form-control" id="name" placeholder="Enter your name">
+                </div>
                 <div class="mb-3">
                     <label for="title" class="form-label">Thread Title</label>
                     <input name="title" type="text" class="form-control" id="title"
