--- a/src/main/resources/static/custom.css
+++ b/src/main/resources/static/custom.css
@@ -1,12 +1,13 @@
 body {
-    background-color: #f0f0f0;
+    background-color: #3d3955;
+    background-image: url("dell.jpg");
     color: #000000;
     font-family: Arial, sans-serif;
     font-size: 12px;
 }
 
 .navbar {
-    background-color: #7289da;
+    background-color: #70a1ff;
     border-bottom: none;
 }
 
@@ -14,27 +15,29 @@ body {
     color: #ffffff;
     font-size: 18px;
     font-weight: bold;
+
 }
 
 .navbar-nav .nav-link {
     color: #ffffff;
     font-size: 14px;
+
 }
 
 .card {
-    background-color: #ffffff;
+    background-color: #70a1ff;
     border: 1px solid #e0e0e0;
 }
 
 .card-title {
     color: #000000;
-    font-size: 14px;
+    font-size: 19px;
     font-weight: bold;
 }
 
 .card-text {
     color: #000000;
-    font-size: 12px;
+    font-size: 13px;
 }
 
 footer {
@@ -97,6 +100,12 @@ footer {
     display: flex;
     justify-content: flex-end;
     text-align: center;
+}
+
+.btn-primary{
+    color: #000000;
+    background-color: #567ac2;
+
 }
 
 
