--- a/src/main/resources/templates/threadPage.html
+++ b/src/main/resources/templates/threadPage.html
@@ -12,7 +12,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-        <a class="navbar-brand" href="/m">Imageboard</a>
+        <a class="navbar-brand"  href="/m">Imageboard</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,16 +20,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="#">xd</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Gallery</a>
+                    <a class="nav-link" href="#">xdd</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Upload</a>
+                    <a class="nav-link" href="#">xddd</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#">xdddd</a>
                 </li>
             </ul>
         </div>
@@ -65,9 +65,7 @@
             <div class="col-md-12 text-center">
                 <a th:href="@{'/' + ${thread.id}}" class="btn btn-primary">Reply</a>
             </div>
-
             <div class="card mb-4">
-
                 <div class="card-body">
                     <h5 class="card-title" th:text="${thread.title}">Thread Title</h5>
                     <div class="thread-info">
