--- a/src/main/resources/templates/threadPage.html
+++ b/src/main/resources/templates/threadPage.html
@@ -40,7 +40,7 @@
 
     <div class="card mb-4">
         <div class="card-body">
-            <form method="post" th:action="${'/submit/' + thread.id}">
+            <form method="post" th:action="${'/m/submit/' + thread.id}">
                 <div class="mb-3">
                     <label for="nameInput" class="form-label">Name</label>
                     <input name="name" type="text" class="form-control" id="nameInput" placeholder="Your Name">
