--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+<!--            <ul class="navbar-nav">-->
 <!--                <li class="nav-item">-->
 <!--                    <a class="nav-link" href="#">xd</a>-->
 <!--                </li>-->
@@ -31,10 +31,11 @@
 <!--                <li class="nav-item">-->
 <!--                    <a class="nav-link" href="#">xdddd</a>-->
 <!--                </li>-->
-            </ul>
+<!--            </ul>-->
         </div>
     </div>
 </nav>
+
 <div class="container mt-4">
     <div class="row">
         <div class="col-md-12 text-center">
@@ -42,7 +43,6 @@
         </div>
     </div>
 </div>
-
 
 <div class="container mt-4">
     <div class="row">
@@ -52,7 +52,9 @@
                     <a th:href="@{'thread/' + ${thread.id}}">
                         <h4 class="card-title" th:text="${thread.title}">Thread Title 1</h4></a>
                     <div class="thread-info">
-                        <span class="thread-id" th:text="${thread.replies[0].getId()}">ID</span>
+                        <span class="thread-id" th:text="'No.'+ ${thread.replies[0].getId()}">ID</span>
+                        <span class="ri" th:text="'R:'+ ${thread.replies.size()-1} + '/I:' +
+                        ${thread.getRepliesWithImage().size()}"></span>
                     </div>
                     <h6 th:text="${thread.replies[0].name}">Author Name 1</h6>
 
@@ -64,7 +66,7 @@
                          th:if="${reply != thread.replies[0] && stats.index < 4}">
                         <div class="card-body">
                             <div class="thread-info">
-                                <span class="thread-id" th:text="${reply.id}">ID</span>
+                                <span class="thread-id" th:text="'No.'+ ${reply.id}">ID</span>
                             </div>
                             <h6  th:text="${reply.name}">Author Name</h6>
                             <img class="answer-image" th:src="${reply.imgURL}" alt="Answer Image" src="#"
@@ -72,7 +74,6 @@
                             <p class="card-text" th:text="${reply.description}">Answer Description 1</p>
                         </div>
                     </div>
-
                     <a th:href="@{'thread/' + ${thread.id}}" class="btn btn-primary">Reply</a>
 
                 </div>
@@ -80,6 +81,22 @@
         </div>
     </div>
 </div>
+
+<nav class="mt-4" aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+        <li class="page-item"><a class="page-link" href="/m/0">1</a></li>
+        <li class="page-item"><a class="page-link" href="/m/1">2</a></li>
+        <li class="page-item"><a class="page-link" href="/m/2">3</a></li>
+        <li class="page-item"><a class="page-link" href="/m/3">4</a></li>
+        <li class="page-item"><a class="page-link" href="/m/4">5</a></li>
+        <li class="page-item"><a class="page-link" href="/m/5">6</a></li>
+        <li class="page-item"><a class="page-link" href="/m/6">7</a></li>
+        <li class="page-item"><a class="page-link" href="/m/7">8</a></li>
+        <li class="page-item"><a class="page-link" href="/m/8">9</a></li>
+        <li class="page-item"><a class="page-link" href="/m/9">10</a></li>
+    </ul>
+</nav>
+
 
 <footer class="bg-dark text-white text-center py-3 mt-5">
     Imageboard &copy; 2023
