--- a/src/main/resources/templates/newThread.html
+++ b/src/main/resources/templates/newThread.html
@@ -9,6 +9,33 @@
 </head>
 
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+        <a class="navbar-brand" href="/m">
+            <img src="/title.png" alt="..." height="75"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <!--            <ul class="navbar-nav">-->
+            <!--                <li class="nav-item">-->
+            <!--                    <a class="nav-link" href="#">xd</a>-->
+            <!--                </li>-->
+            <!--                <li class="nav-item">-->
+            <!--                    <a class="nav-link" href="#">xdd</a>-->
+            <!--                </li>-->
+            <!--                <li class="nav-item">-->
+            <!--                    <a class="nav-link" href="#">xddd</a>-->
+            <!--                </li>-->
+            <!--                <li class="nav-item">-->
+            <!--                    <a class="nav-link" href="#">xdddd</a>-->
+            <!--                </li>-->
+            <!--            </ul>-->
+        </div>
+    </div>
+</nav>
+
 <div class="container mt-4">
     <div class="row">
         <div class="col-md-6 offset-md-3">
