--- a/src/main/resources/templates/newThread.html
+++ b/src/main/resources/templates/newThread.html
@@ -40,7 +40,7 @@
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <h2 class="text-center">Submit Thread</h2>
-            <form method="post" th:action="posted">
+            <form method="post" th:action="posted" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="name" class="form-label">Your Name</label>
                     <input name="name" type="text" class="form-control" id="name" placeholder="Enter your name">
@@ -57,7 +57,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="image" class="form-label">Upload Image</label>
-                    <input type="file" class="form-control" id="image">
+                    <input type="file" name="imgFile" class="form-control" id="image">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
