--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -71,13 +71,13 @@
                                 <span th:text="'Date: ' + ${#temporals.format(reply.date, 'dd/MMM/yyyy HH:mm:ss')}"></span>
                             </div>
                             <h6  th:text="${reply.name}">Author Name</h6>
-                            <img class="answer-image" th:src="${reply.imgURL}" alt="Answer Image" src="#"
+                            <img class="reply-image" th:src="${reply.imgURL}" alt="Answer Image" src="#"
                                  th:if="${reply.getImgURL() != null && reply.getImgURL() != ''}">
                             <p class="card-text" th:text="${reply.description}">Answer Description 1</p>
                         </div>
                     </div>
-                    <a th:href="@{'/m/thread/' + ${thread.id}}" class="btn btn-primary">Reply</a>
                 </div>
+                <a th:href="@{'/m/thread/' + ${thread.id}}" class="btn btn-primary2">Reply</a>
             </div>
         </div>
     </div>
