--- a/src/main/resources/templates/threadPage.html
+++ b/src/main/resources/templates/threadPage.html
@@ -81,8 +81,11 @@
                 </div>
             </div>
 
-            <h3>Replies</h3>
-            <div class="card mb-4" th:each="reply : ${thread.replies}" th:if="${reply != thread.replies[0]}">
+            <div class="col-md-12">
+                <h2 class="text-center bare-text">Replies</h2>
+                <div class="row">
+
+                    <div class="card mb-4" th:each="reply : ${thread.replies}" th:if="${reply != thread.replies[0]}">
                 <div class="card-body">
                     <div class="thread-info">
                         <span class="thread-id" th:text="${reply.id}">ID</span>
