--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                 </div>
-                <a th:href="@{'/m/thread/' + ${thread.id}}" class="btn btn-primary2">Reply</a>
+                <a th:href="@{'/m/thread/' + ${thread.id}}" class="btn btn-primary reply-button-index">Reply</a>
             </div>
         </div>
     </div>
