--- a/src/main/resources/templates/threadPage.html
+++ b/src/main/resources/templates/threadPage.html
@@ -63,7 +63,7 @@
         <div class="col-md-6 offset-md-3">
 
             <div class="col-md-12 text-center">
-                <a class="btn btn-primary" id="replyButton">Reply</a>
+                <a class="btn btn-primary reply-button-index" id="replyButton">Reply</a>
             </div>
 
             <div class="card mb-4">
