--- a/src/main/resources/static/custom.css
+++ b/src/main/resources/static/custom.css
@@ -108,7 +108,7 @@ footer {
     background-color: rgba(244, 121, 101, 0.72);
 }
 
-.btn-primary2{
+.reply-button-index{
     width: 78px !important;
     padding: 5px;
     margin-left: 16px;
