--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,6 +38,7 @@
 
 <div class="container mt-4">
     <div class="row">
+        <a th:href="@{'/m/login'}">[Login]</a>
         <div class="col-md-12 text-center">
             <a th:href="@{'/m/newthread'}" class="btn btn-primary">Start new thread</a>
         </div>
@@ -69,8 +70,9 @@
                          th:if="${reply != thread.replies[0] && stats.index &lt; 4}">
                         <div class="card-body">
                             <div class="thread-info">
-                                <span class="thread-id" th:text="'No.'+ ${reply.id}">ID</span>
                                 <span th:text="'Date: ' + ${#temporals.format(reply.date, 'dd/MMM/yyyy HH:mm:ss')}"></span>
+                                <br/>
+                                <span class="thread-id" th:text="'No.'+ ${reply.id}">ID</span>
                             </div>
                             <h6  th:text="${reply.name}">Author Name</h6>
                             <img class="reply-image" th:src="${reply.imgURL}" alt="Answer Image" src="#"
