--- a/src/main/resources/templates/adminLogin.html
+++ b/src/main/resources/templates/adminLogin.html
@@ -14,10 +14,10 @@
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <h2 class="text-center">Administrator Login</h2>
-            <form>
+            <form method="post" th:action="login-post">
                 <div class="mb-3">
                     <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="Enter your password">
+                    <input name="password" type="password" class="form-control" id="password" placeholder="Enter your password">
                 </div>
             </form>
 
