--- a/src/main/resources/templates/adminLogin.html
+++ b/src/main/resources/templates/adminLogin.html
@@ -14,10 +14,13 @@
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <h2 class="text-center">Administrator Login</h2>
-            <form method="post" th:action="login-post">
+            <form method="post" th:action="@{/m/login}">
                 <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input name="name" class="form-control" id="name" placeholder="Enter your username">
                     <label for="password" class="form-label">Password</label>
                     <input name="password" type="password" class="form-control" id="password" placeholder="Enter your password">
+                    <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
             </form>
 
