--- a/src/main/resources/templates/adminLogin.html
+++ b/src/main/resources/templates/adminLogin.html
@@ -14,8 +14,11 @@
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <h2 class="text-center">Administrator Login</h2>
-            <form method="post" th:action="@{/m/login}">
+            <form th:action="@{/m/login}" method="post">
                 <div class="mb-3">
+                    <div th:if="${param.error}">
+                        Invalid username and password.
+                    </div>
                     <label for="name" class="form-label">Name</label>
                     <input name="name" class="form-control" id="name" placeholder="Enter your username">
                     <label for="password" class="form-label">Password</label>
