--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
 
 <div class="container mt-4">
     <div class="row">
-        <a th:href="@{'/m/login'}">[Login]</a>
+        <a th:href="@{'/m/user-login'}">[Login]</a>
         <div class="col-md-12 text-center">
             <a th:href="@{'/m/newthread'}" class="btn btn-primary">Start new thread</a>
         </div>
