--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,14 +19,13 @@
                     <div th:if="${param.error}">
                         Invalid username and password.
                     </div>
-                    <label for="name" class="form-label">Name</label>
-                    <input name="name" class="form-control" id="name" placeholder="Enter your username">
+                    <label for="username" class="form-label">Name</label>
+                    <input name="username" class="form-control" id="username" placeholder="Enter your username">
                     <label for="password" class="form-label">Password</label>
                     <input name="password" type="password" class="form-control" id="password" placeholder="Enter your password">
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
             </form>
-
         </div>
     </div>
 </div>
